# NeuralNetwork

./: .gitignore  CMakeLists.txt  Makefile  README.md  coordinate.cpp  coordinate.hpp  matrix.hpp  matrixTest.cpp
include/: constants.hpp  coordinate.hpp  matrix.hpp  operations.hpp  shape.hpp  tensor.hpp  typeTraits.hpp
include/activations/: activation.hpp  relu.hpp
include/detail/: shapeOperations.hpp
include/initializers/: initializer.hpp  valueInitializer.hpp  zeroInitializer.hpp
include/layers/: denseLayer.hpp  inputLayer.hpp  layer.hpp  layerUtils.hpp
include/memory/: tensorContainer.hpp  tensorData.hpp
include/utils/: tensorUtils.hpp
includes/: zip.hpp
models/: benchmark.py
models/basic/: basic.py  train.py
models/basic/model/: saved_model.pb
models/basic/model/variables/: variables.data-00000-of-00001  variables.index
test/: CMakeLists.txt  layers.cpp  main.cpp  mathTest.cmake  operations.cpp  shape.cpp  tensor.cpp  utils.cpp
test/activations/: activation.cpp
test/initializers/: initializers.cpp
test/memory/: tensorContainer.cpp  tensorData.cpp
